Extract navigation from document.
- So document can be used to wrap other content.
- The generate function is moved to the library.

--- a/design-system.cabal
+++ b/design-system.cabal
@@ -24,6 +24,5 @@ executable hypered-guide
   hs-source-dirs:      bin
   main-is:             hypered-guide.hs
   build-depends:       base == 4.*,
-                       design-system,
-                       text
+                       design-system
   ghc-options:         -Wall
