--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "plot",
+  "name": "noteed-next",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -7,7 +7,6 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
-    "now-build": "next build && next export -o dist"
   },
   "keywords": [],
   "author": "",
