--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "classnames": "^2.2.6",
-    "next": "^9.0.5",
+    "next": "latest",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "styled-components": "^5.0.0-beta.8",
