--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@storybook/react": "^5.2.1",
     "babel-loader": "^8.0.5",
     "babel-plugin-polished": "^1.1.0",
-    "babel-plugin-styled-components": "^1.10.6"
+    "babel-plugin-styled-components": "^1.10.6",
+    "storybook-react-to-static-markup": "^0.1.1"
   }
 }
