Update name and description

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "noteed-next",
+  "name": "hypered-design-system",
   "version": "1.0.0",
-  "description": "",
+  "description": "A design system for Hypered projects.",
   "main": "index.js",
   "scripts": {
     "dev": "next",
