Add a repository field to package.json.

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "hypered-design-system",
   "version": "1.0.0",
   "description": "A design system for Hypered projects.",
+  "repository": "github:hypered/design-system",
   "main": "index.js",
   "scripts": {
     "dev": "next",
