--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "babel-loader": "^8.0.5",
     "babel-plugin-polished": "^1.1.0",
     "babel-plugin-styled-components": "^1.10.6",
+    "babel-plugin-transform-define": "^2.0.0",
     "storybook-react-to-static-markup": "^0.1.1"
   }
 }
