--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "export": "next export",
     "start": "next start",
     "storybook": "start-storybook -s ./static -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook -s ./static"
   },
   "keywords": [],
   "author": "",
