Add Nix scaffolding.
This is similar to what was done in hypred/curiosity.

--- a/design-system.cabal
+++ b/design-system.cabal
@@ -29,3 +29,12 @@ executable hypered-guide
                        design-system,
                        text
   ghc-options:         -Wall
+
+executable hypered-templates
+  hs-source-dirs:      bin
+  main-is:             hypered-templates.hs
+  build-depends:       base == 4.*,
+                       blaze-html,
+                       design-system,
+                       text
+  ghc-options:         -Wall
