--- a/design-system.cabal
+++ b/design-system.cabal
@@ -16,6 +16,7 @@ library
   build-depends:       base == 4.*,
                        blaze-builder,
                        blaze-html,
+                       blaze-markup,
                        directory,
                        filepath,
                        optparse-applicative,
