Move Stories.hs in Hypered/Design.
The idea is that there are two libraries in one here: hypered-html
should provide just blaze-html definitions, and hypered-design should
provide the program to generate the design system website.

--- a/design-system.cabal
+++ b/design-system.cabal
@@ -24,8 +24,8 @@ library
                        text
   exposed-modules:     Hypered.Design.Command,
                        Hypered.Design.Run,
-                       Hypered.Html,
-                       Hypered.Stories
+                       Hypered.Design.Stories,
+                       Hypered.Html
   ghc-options:         -Wall
 
 executable hypered-design
