--- a/hypered-design.cabal
+++ b/hypered-design.cabal
@@ -43,6 +43,7 @@ library
     , wai-app-static
     , warp
   exposed-modules:     Hypered.Design.Command,
+                       Hypered.Design.Examples,
                        Hypered.Design.Run,
                        Hypered.Design.Server,
                        Hypered.Design.Stories,
