Move some code to a new module.

--- a/hypered-design.cabal
+++ b/hypered-design.cabal
@@ -44,6 +44,7 @@ library
     , warp
   exposed-modules:     Hypered.Design.Command,
                        Hypered.Design.Examples,
+                       Hypered.Design.Guide,
                        Hypered.Design.Run,
                        Hypered.Design.Server,
                        Hypered.Design.Stories,
