--- a/d3/package.json
+++ b/d3/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "d3-node": "^3.0.0",
     "gulp": "^4.0.2",
-    "gulp-file": "^0.4.0"
+    "gulp-file": "^0.4.0",
+    "gulp-rename": "^2.0.0"
   },
   "devDependencies": {}
 }
