--- a/hypered-design.cabal
+++ b/hypered-design.cabal
@@ -45,6 +45,7 @@ library
     , warp
   exposed-modules:     Hypered.Design.Command,
                        Hypered.Design.Examples,
+                       Hypered.Design.IO,
                        Hypered.Design.Guide,
                        Hypered.Design.Run,
                        Hypered.Design.Server,
