--- a/itcss/package.json
+++ b/itcss/package.json
@@ -8,11 +8,14 @@
   "author": "",
   "license": "BSD2",
   "dependencies": {
+    "@fullhuman/postcss-purgecss": "^5.0.0",
     "browser-sync": "^2.27.10",
+    "cssnano": "^6.0.1",
     "gulp": "^4.0.2",
     "gulp-pug": "^5.0.0",
     "gulp-sass": "^5.1.0",
+    "postcss": "^8.4.23",
+    "postcss-cli": "^10.1.0",
     "sass": "^1.52.1"
-  },
-  "devDependencies": {}
+  }
 }
