Add some code to compute fluid spacing values.
This is similar to https://utopia.fyi.

--- a/hypered-design.cabal
+++ b/hypered-design.cabal
@@ -45,6 +45,7 @@ library
     , warp
   exposed-modules:     Hypered.Design.Command,
                        Hypered.Design.Examples,
+                       Hypered.Design.Fluid,
                        Hypered.Design.IO,
                        Hypered.Design.Guide,
                        Hypered.Design.Run,
