--- a/itcss/package.json
+++ b/itcss/package.json
@@ -14,6 +14,7 @@
     "gulp": "^4.0.2",
     "gulp-pug": "^5.0.0",
     "gulp-sass": "^5.1.0",
+    "jstransformer-escape-html": "^1.1.0",
     "postcss": "^8.4.23",
     "postcss-cli": "^10.1.0",
     "sass": "^1.52.1"
