--- a/hypered-design.cabal
+++ b/hypered-design.cabal
@@ -53,7 +53,7 @@ library
                        Hypered.Design.Server,
                        Hypered.Design.Stories,
                        Hypered.Design.Templates,
-                       Hypered.Html
+                       Hypered.Html.Tachyons
   ghc-options:         -Wall
 
 executable hypered-design
