Start implementing Struct in Haskell.

--- a/hypered-design.cabal
+++ b/hypered-design.cabal
@@ -53,6 +53,7 @@ library
                        Hypered.Design.Server,
                        Hypered.Design.Stories,
                        Hypered.Design.Templates,
+                       Hypered.Html.Struct,
                        Hypered.Html.Tachyons
   ghc-options:         -Wall
 
