--- a/hypered-design.cabal
+++ b/hypered-design.cabal
@@ -53,7 +53,9 @@ library
                        Hypered.Design.Server,
                        Hypered.Design.Stories,
                        Hypered.Design.Templates,
-                       Hypered.Html.Struct,
+                       Hypered.Html.Helpers,
+                       Hypered.Html.Struct.Prototypes.Motherboard.Indices,
+                       Hypered.Html.Struct.Specimens,
                        Hypered.Html.Tachyons
   ghc-options:         -Wall
 
