--- a/itcss/package.json
+++ b/itcss/package.json
@@ -12,6 +12,7 @@
     "browser-sync": "^2.27.10",
     "cssnano": "^6.0.1",
     "gulp": "^4.0.2",
+    "gulp-cssnano": "^2.1.3",
     "gulp-data": "^1.3.1",
     "gulp-pug": "^5.0.0",
     "gulp-sass": "^5.1.0",
