Factor some code to start the Refli landing page.

--- a/hypered-design.cabal
+++ b/hypered-design.cabal
@@ -54,6 +54,7 @@ library
                        Hypered.Design.Server,
                        Hypered.Design.Stories,
                        Hypered.Design.Templates,
+                       Hypered.Html.Common,
                        Hypered.Html.Helpers,
                        Hypered.Html.Struct.Prototypes.Motherboard.Documents,
                        Hypered.Html.Struct.Prototypes.Motherboard.Indices,
