Implement the blog index in Haskell.

--- a/hypered-design.cabal
+++ b/hypered-design.cabal
@@ -27,6 +27,7 @@ library
     , blaze-builder
     , blaze-html
     , blaze-markup
+    , blaze-svg
     , commence-core
     , directory
     , exceptions
