Add example script using Pandoc as a library.

--- a/hypered-design.cabal
+++ b/hypered-design.cabal
@@ -36,6 +36,7 @@ library
     , http-types
     , optparse-applicative
     , pretty-simple
+    , pandoc
     , protolude
     , servant
     , servant-blaze
