--- a/hypered-design.cabal
+++ b/hypered-design.cabal
@@ -28,7 +28,7 @@ library
     , blaze-html
     , blaze-markup
     , blaze-svg
-    , commence-core
+    , commence
     , directory
     , exceptions
     , filepath
