Start implementing the email example in Haskell.

--- a/hypered-design.cabal
+++ b/hypered-design.cabal
@@ -61,6 +61,7 @@ library
                        Hypered.Html.Struct.Prototypes.Motherboard.Documents,
                        Hypered.Html.Struct.Prototypes.Motherboard.Indices,
                        Hypered.Html.Struct.Prototypes.Refli.Common,
+                       Hypered.Html.Struct.Prototypes.Refli.Email,
                        Hypered.Html.Struct.Prototypes.Refli.LandingPage,
                        Hypered.Html.Struct.Specimens,
                        Hypered.Html.Tachyons
