Add other .pug files to the Makefile.

--- a/struct/Makefile
+++ b/struct/Makefile
@@ -1,14 +1,16 @@
 # Directory variables
-PUG_DIR := templates/notes
+PUG_BASE_DIR := templates
+PUG_DIRS := templates/notes templates/specimens templates/index.pug templates/struct.pug
 SCSS_DIR := scss/struct
 STATIC_DIR := static
 
+HTML_OUTPUT_BASE := _site
 HTML_OUTPUT_DIR := _site/notes
 SCSS_OUTPUT_DIR := _site/static/css/struct
 STATIC_OUTPUT_DIR := _site/static
 
 # Find sources
-PUG_SOURCES := $(shell find $(PUG_DIR) -name '*.pug')
+PUG_SOURCES := $(shell find $(PUG_DIRS) -name '*.pug')
 SCSS_SOURCES := $(shell find $(SCSS_DIR) -name '*.scss')
 STATIC_FILES := $(shell find $(STATIC_DIR) -type f)
 
@@ -16,7 +18,7 @@ STATIC_FILES := $(shell find $(STATIC_DIR) -type f)
 HTML_FILES := $(patsubst %.pug,%.html,$(PUG_SOURCES))
 CSS_FILES := $(patsubst %.scss,%.css,$(SCSS_SOURCES))
 
-HTML_TARGETS := $(addprefix $(HTML_OUTPUT_DIR)/,$(subst $(PUG_DIR)/,,$(HTML_FILES)))
+HTML_TARGETS := $(addprefix $(HTML_OUTPUT_BASE)/,$(subst $(PUG_BASE_DIR)/,,$(HTML_FILES)))
 CSS_TARGETS := $(patsubst $(SCSS_DIR)/%.css,$(SCSS_OUTPUT_DIR)/%.css,$(CSS_FILES))
 STATIC_TARGETS := $(patsubst $(STATIC_DIR)/%, $(STATIC_OUTPUT_DIR)/%, $(STATIC_FILES))
 
@@ -28,7 +30,7 @@ ALL_TARGETS := $(HTML_TARGETS) $(CSS_TARGETS) $(STATIC_TARGETS) $(STATIC_OUTPUT_
 all: $(ALL_TARGETS)
 
 # HTML generation rule
-$(HTML_OUTPUT_DIR)/%.html: $(PUG_DIR)/%.pug
+$(HTML_OUTPUT_BASE)/%.html: $(PUG_BASE_DIR)/%.pug
 	mkdir -p $(dir $@)
 	pughs render $< > $@
 
